fixed the collapse button

--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,11 @@ body{
   }
 }
 
+#main-footer h1{
+  text-align: center;
+  font-size: 1.5rem;
+}
+
 
 // Media Queries
 @media(max-width:759px){
